0.1.12  xx-xxx-2009
  o Fix a bug in the hidden service settings configuration class that
    could lead to compile errors in Visual Studio and on IRIX.
  o Remove two duplicated strings in the Spanish translation of Qt's
    internal strings (qt_es.po). The duplicated strings caused build
    errors when building with Qt 4.5. (Ticket #469)
  o Add an application icon based on Tor's logo to the vidalia.desktop
    file.


0.1.11  16-Feb-2009
  o Remove support for configuring Tor's User and Group options in the 
    Advanced settings page.
  o Only set HttpsProxy if both the "I use a proxy..." checkbox and the 
    "Use this proxy for HTTPS also" checkboxes are checked. Otherwise,
    unset it. (Ticket #440)
  o Fix a use of an uninitialized variable that would occur when Tor was
    already running when Vidalia started, and the "Start Tor when Vidalia
    Starts" checkbox is checked. (Ticket #443)
  o Switch to using 'getinfo address-mappings' instead of
    'getinfo addr-mappings'. (Ticket #454)
  o Backport a change that removes a verticalSpacing property from a .ui
    file, so Vidalia 0.1.x will still build on Qt 4.2. (Ticket #442)
  o Fix some memory leaks in the hidden service configuration dialog.
  o Fix a CIRC event parsing bug that would occur when the CIRC event
    contained a 0-hop circuit path and EXTENDED_EVENTS is enabled.
  o Include patches from Steven J. Murdoch that enables the Tor Browser
    Bundle to launch Firefox itself without relying on Portable Firefox.


0.1.10  02-Nov-2008
  o Add a prettier dialog for prompting people for their control port password
    that also includes a checkbox for whether the user wants Vidalia to remember
    the entered password, a Help button, and a Reset button (Windows only).
  o Fix a crash bug that occurred when the user clicks 'Clear' in the message
    log toolbar followed by 'Save All'. (Ticket #434)
  o Uncheck the Torbutton options by default in the Windows bundle installer